push gcr from ci

--- a/circle.yml
+++ b/circle.yml
@@ -1,9 +1,40 @@
+
 machine:
+  environment:
+    CLOUDSDK_CORE_DISABLE_PROMPTS: 1
+    CLOUDSDK_PYTHON_SITEPACKAGES: 1
+    CLOUDSDK_COMPUTE_ZONE: us-central1-a
+    CLOUDSDK_CORE_PROJECT: $GCLOUD_PROJECTID
+    PATH: $PATH:/home/ubuntu/google-cloud-sdk/bin
+  python:
+    version: 2.7.3
   services:
     - docker
+
 dependencies:
+  cache_directories:
+    - ~/google-cloud-sdk
+    - ~/docker
   override:
-    - docker build -t ci .
+    # - script/ensure-gcloud-installed.sh
+    - if [[ -e ~/docker/image.tar ]]; then docker load -i ~/docker/image.tar; fi
+    - docker build -t $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker:$CIRCLE_SHA1 .
+    - mkdir -p ~/docker; docker save $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker:$CIRCLE_SHA1 > ~/docker/image.tar
+
+database:
+  override:
+    - echo
+
 test:
   override:
-    - docker run ci sh '-c' 'go version && go get -u github.com/golang/dep/... && dep ensure -update && go test ./sample'
+    - docker run ci sh '-c' 'go version && dep ensure -update && go test ./sample'
+    # - docker run -d -p 8080:9000  $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker:$CIRCLE_SHA1
+    # - curl --retry 10 --retry-delay 5 -v http://localhost:8080
+
+deployment:
+  prod:
+    branch: master
+    commands:
+      - script/auth-gcloud.sh
+      - gcloud docker push $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker > /dev/null
+
