--- a/circle.yml
+++ b/circle.yml
@@ -27,7 +27,7 @@ database:
 
 test:
   override:
-    - docker run ci sh '-c' 'go version && dep ensure -update && go test ./sample'
+    - docker run $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker:$CIRCLE_SHA1 sh '-c' 'go version && dep ensure -update && go test ./sample'
     # - docker run -d -p 8080:9000  $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker:$CIRCLE_SHA1
     # - curl --retry 10 --retry-delay 5 -v http://localhost:8080
 
