--- a/circle.yml
+++ b/circle.yml
@@ -20,6 +20,7 @@ dependencies:
     - if [[ -e ~/docker/image.tar ]]; then docker load -i ~/docker/image.tar; fi
     - docker build -t $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker:$CIRCLE_SHA1 .
     - mkdir -p ~/docker; docker save $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker:$CIRCLE_SHA1 > ~/docker/image.tar
+    - docker images
 
 database:
   override:
@@ -36,5 +37,5 @@ deployment:
     branch: [master, feature/gcp]
     commands:
       - script/auth-gcloud.sh
-      - gcloud docker push $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker > /dev/null
+      - gcloud docker -- push $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker > /dev/null
 
