--- a/circle.yml
+++ b/circle.yml
@@ -37,5 +37,6 @@ deployment:
     branch: [master, feature/gcp]
     commands:
       - script/auth-gcloud.sh
+      - gcloud components update
       - gcloud docker -- push $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker > /dev/null
 
