--- a/circle.yml
+++ b/circle.yml
@@ -17,8 +17,8 @@ dependencies:
   override:
     # - script/ensure-gcloud-installed.sh
     - if [[ -e ~/docker/image.tar ]]; then docker load -i ~/docker/image.tar; fi
-    - docker build -t $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker:$CIRCLE_SHA1 .
-    - mkdir -p ~/docker; docker save $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker:$CIRCLE_SHA1 > ~/docker/image.tar
+    - docker build -t $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker .
+    - mkdir -p ~/docker; docker save $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker > ~/docker/image.tar
     - docker images
 
 database:
@@ -27,7 +27,7 @@ database:
 
 test:
   override:
-    - docker run $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker:$CIRCLE_SHA1 sh '-c' 'go version && dep ensure -update && go test ./sample'
+    - docker run $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker sh '-c' 'go version && dep ensure -update && go test ./sample'
     # - docker run -d -p 8080:9000  $EXTERNAL_REGISTRY_ENDPOINT/gozen-docker:$CIRCLE_SHA1
     # - curl --retry 10 --retry-delay 5 -v http://localhost:8080
 
