--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,7 @@
 
 machine:
   environment:
+    PROJECT_NAME: gozen
     CLOUDSDK_CORE_DISABLE_PROMPTS: 1
     CLOUDSDK_PYTHON_SITEPACKAGES: 1
     CLOUDSDK_COMPUTE_ZONE: us-central1-a
